--- a/package.json
+++ b/package.json
@@ -15,29 +15,30 @@
     "tem": "node --experimental-specifier-resolution=node --loader ts-node/esm"
   },
   "devDependencies": {
-    "@astrojs/markdown-remark": "^2.2.1",
-    "@astrojs/rss": "^2.4.4",
-    "@astrojs/sitemap": "^1.4.0",
-    "@astrojs/tailwind": "^3.1.3",
-    "@tailwindcss/typography": "^0.5.9",
-    "astro": "^2.10.7",
+    "@astrojs/markdown-remark": "^4.2.1",
+    "@astrojs/rss": "^4.0.5",
+    "@astrojs/sitemap": "^3.1.1",
+    "@astrojs/tailwind": "^5.1.0",
+    "@tailwindcss/typography": "^0.5.10",
+    "astro": "^4.4.5",
     "blurhash": "^2.0.5",
-    "dayjs": "^1.11.9",
-    "dotenv": "^16.3.1",
+    "dayjs": "^1.11.10",
+    "dotenv": "^16.4.5",
     "html-entities": "^2.4.0",
     "prettier": "^2.8.8",
     "prettier-plugin-astro": "^0.9.1",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "reading-time": "^1.5.0",
-    "sharp": "^0.32.4",
-    "tailwindcss": "^3.3.3",
-    "ts-node": "^10.9.1",
+    "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "unist-util-select": "4.0.3",
-    "wretch": "^2.6.0"
+    "wretch": "^2.8.0"
   },
   "dependencies": {
-    "contentful-cli": "^2.6.41",
+    "contentful-cli": "^2.8.27",
     "flowbite": "^1.8.1",
-    "pnpm": "^8.6.12"
+    "pnpm": "^8.15.4",
+    "sharp": "^0.33.2",
+    "typescript": "^5.3.3"
   }
 }
