update:fix problem

--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@astrojs/sitemap": "^3.1.1",
     "@astrojs/tailwind": "^5.1.0",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/js-yaml": "^4.0.9",
     "astro": "^4.4.5",
     "blurhash": "^2.0.5",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
     "html-entities": "^2.4.0",
+    "js-yaml": "^4.1.1",
     "prettier": "^2.8.8",
     "prettier-plugin-astro": "^0.9.1",
     "prettier-plugin-tailwindcss": "^0.3.0",
